--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.3",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
